Ensured background picture is visible for step4 in GitHub pages.

--- a/parts/global.css
+++ b/parts/global.css
@@ -25,12 +25,12 @@ body {
 .container {
     background-color: rgba(248, 255, 246);
     margin: 0 auto;
-    padding: 60px 30px; /* Reduced padding for a more compact look */
-    width: 80%;
+    padding: 60px 30px !important; /* Reduced padding for a more compact look */
+    width: 80% !important;
     border-radius: 45px;
     position: relative;
     text-align: center;
-    max-width: 1000px;
+    max-width: 1000px !important;
     top: -30px;  /* Slightly reduced top positioning */
     z-index: 1;  /* Behind the active tab */
     box-sizing: border-box;
@@ -42,7 +42,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 800px;
+    max-width: 800px !important;
     margin: 0 auto;
     position: relative;
 }
@@ -107,8 +107,8 @@ body {
 }
 
 .previous-button img {
-    width: 70px;
-    height: 70px;
+    width: 70px !important;
+    height: 70px !important;
     cursor: pointer;
 }
 
@@ -118,16 +118,16 @@ body {
 }
 
 .finish-text {
-    color: #519D4B;
-    font-size: 36px;
+    color: #155724;
+    font-size: 28px;
     font-weight: bold;
-    margin-right: 20px;
+    margin-right: 10px;
     margin-bottom: 8px;
 }
 
 .next-button img {
-    width: 70px;
-    height: 70px;
+    width: 70px !important;
+    height: 70px !important;
     margin-left: 10px;
     cursor: pointer;
 }
